--- a/enlaces.html
+++ b/enlaces.html
@@ -37,6 +37,7 @@
           <button class="button">Más info</button>
         </div>
       </div>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">TIS_RETOS_VIRALES_2019/2020</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://investigacionsocialretosvirales.github.io/ELP/" property="cc:attributionName" rel="cc:attributionURL">Jairo Sanchez Velez, Esther Peñas Martinez, Mercedes Herrero Fernandez, Veronika Borislavova Yankova, Gasan Mohamad Nazer ,Genesis Duque Escobar</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional License</a>.
 </body>
 
 </html>
