--- a/enlaces.html
+++ b/enlaces.html
@@ -8,21 +8,58 @@
 </head>
 
 <body onload="retardo()">
-    <a id="notice1" href="https://www.lasexta.com/noticias/sociedad/hijo-comporta-asi-alerta-estas-son-pruebas-macabro-juego-ballena-azul_2017042859031b940cf2ea95b034b932.html"><img src="noticia/ballenaAzul.png"></a>
-    <a id="notice2" href="https://www.lateja.cr/nacional/alarma-por-juego-ballena-azul/XXJD4VUXUBDH3BKRZAMDW6ZXJY/story/"><img src="noticia/alertaBA.png"></a>
-    <a id="notice3" href="https://www.thesun.co.uk/news/2968966/russia-teenage-deaths-social-media-suicide-police-investigation/"><img src="noticia/investigacion.png"></a>
-    <a id="notice4" href="https://www.thesun.co.uk/news/3112487/blue-whale-suicide-game-russia-boy-saved-jumping-off-flats/"><img src="noticia/salvado.png"></a>
-    <a id="notice5" href="https://inews.co.uk/news/long-reads/blue-whale-suicide-game-online-grooming-predators-307456"><img src="noticia/carcel.png"></a>
-    <a id="notice6" href="https://www.express.co.uk/news/world/776496/How-to-become-a-fairy-game-girls-gas-fire-Rainbow-Sofia-Ezhov-Winx-Club-School-of-Witches"><img src="noticia/hada.png"></a>
-    <a id="notice7" href="https://www.verywellmind.com/what-is-the-choking-game-3288288"><img src="noticia/juegoMuerte.png"></a>
-    <a id="notice8" href="https://www.europafm.com/noticias/viral/sal-hielo-peligroso-challenge-que-debes-hacer_201701265889f30c0cf26c6d591a9930.html"><img src="noticia/salHielo.png"></a>
-    <a id="notice9" href="https://www.elperiodico.com/es/sociedad/20190529/juego-muerte-reto-viral-7479178"><img src="noticia/asfixia.png"></a>
-    <a id="notice10" href="https://www.notimerica.com/sociedad/noticia-nuevo-reto-viral-tide-pod-challenge-enfermando-adolescentes-iberoamerica-estados-unidos-20180119144816.html"><img src="noticia/tidePod.png"></a>
-    <a id="notice11" href="https://www.lasexta.com/noticias/virales/hot-water-challenge-nuevo-absurdo-reto-viral-arrojarse-agua-hirviendo-que-causado-victimas-mortales_2017083059a699230cf26532b9f3b6f5.html"><img src="noticia/hotWater.png"></a>
-    <a id="notice12" href="https://www.abc.es/sociedad/abci-fire-challenge-reto-viral-dejado-nino-herido-grave-quemaduras-segundo-grado-201910081138_noticia.html"><img src="noticia/fuego.png"></a>
-	<div>
-		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="imgpeque" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">TIS_RETOS_VIRALES_2019/2020</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://investigacionsocialretosvirales.github.io/ELP/" property="cc:attributionName" rel="cc:attributionURL">Jairo Sanchez Velez, Esther Peñas Martinez, Mercedes Herrero Fernandez, Veronika Borislavova Yankova, Gasan Mohamad Nazer ,Genesis Duque Escobar</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional License</a>.
-	</div>
-	</body>
+    <header>
+        <h2>NOTICIAS:</h2>
+        <a class="encuesta" href="https://forms.gle/twL4H68uWmjTj77v5">Encuesta</a>
+    </header>
+    <div class="grid">
+        <a id="notice1"
+            href="https://www.lasexta.com/noticias/sociedad/hijo-comporta-asi-alerta-estas-son-pruebas-macabro-juego-ballena-azul_2017042859031b940cf2ea95b034b932.html"><img
+                src="noticia/ballenaAzul.png"></a>
+        <a id="notice2"
+            href="https://www.lateja.cr/nacional/alarma-por-juego-ballena-azul/XXJD4VUXUBDH3BKRZAMDW6ZXJY/story/"><img
+                src="noticia/alertaBA.png"></a>
+        <a id="notice3"
+            href="https://www.thesun.co.uk/news/2968966/russia-teenage-deaths-social-media-suicide-police-investigation/"><img
+                src="noticia/investigacion.png"></a>
+        <a id="notice4"
+            href="https://www.thesun.co.uk/news/3112487/blue-whale-suicide-game-russia-boy-saved-jumping-off-flats/"><img
+                src="noticia/salvado.png"></a>
+        <a id="notice5"
+            href="https://inews.co.uk/news/long-reads/blue-whale-suicide-game-online-grooming-predators-307456"><img
+                src="noticia/carcel.png"></a>
+        <a id="notice6"
+            href="https://www.express.co.uk/news/world/776496/How-to-become-a-fairy-game-girls-gas-fire-Rainbow-Sofia-Ezhov-Winx-Club-School-of-Witches"><img
+                src="noticia/hada.png"></a>
+        <a id="notice7" href="https://www.verywellmind.com/what-is-the-choking-game-3288288"><img
+                src="noticia/juegoMuerte.png"></a>
+        <a id="notice8"
+            href="https://www.europafm.com/noticias/viral/sal-hielo-peligroso-challenge-que-debes-hacer_201701265889f30c0cf26c6d591a9930.html"><img
+                src="noticia/salHielo.png"></a>
+        <a id="notice9" href="https://www.elperiodico.com/es/sociedad/20190529/juego-muerte-reto-viral-7479178"><img
+                src="noticia/asfixia.png"></a>
+        <a id="notice10"
+            href="https://www.notimerica.com/sociedad/noticia-nuevo-reto-viral-tide-pod-challenge-enfermando-adolescentes-iberoamerica-estados-unidos-20180119144816.html"><img
+                src="noticia/tidePod.png"></a>
+        <a id="notice11"
+            href="https://www.lasexta.com/noticias/virales/hot-water-challenge-nuevo-absurdo-reto-viral-arrojarse-agua-hirviendo-que-causado-victimas-mortales_2017083059a699230cf26532b9f3b6f5.html"><img
+                src="noticia/hotWater.png"></a>
+        <a id="notice12"
+            href="https://www.abc.es/sociedad/abci-fire-challenge-reto-viral-dejado-nino-herido-grave-quemaduras-segundo-grado-201910081138_noticia.html"><img
+                src="noticia/fuego.png"></a>
+    </div>
+
+    <footer class="licencia">
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="imgpeque"
+                alt="Licencia de Creative Commons" style="border-width:0"
+                src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span
+            xmlns:dct="http://purl.org/dc/terms/" property="dct:title">TIS_RETOS_VIRALES_2019/2020</span> by <a
+            xmlns:cc="http://creativecommons.org/ns#" href="https://investigacionsocialretosvirales.github.io/ELP/"
+            property="cc:attributionName" rel="cc:attributionURL">Jairo Sanchez Velez, Esther Peñas Martinez, Mercedes
+            Herrero Fernandez, Veronika Borislavova Yankova, Gasan Mohamad Nazer ,Genesis Duque Escobar</a> is licensed
+        under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons
+            Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional License</a>.
+    </footer>
+</body>
 
 </html>
