--- a/enlaces.html
+++ b/enlaces.html
@@ -10,41 +10,41 @@
 <body onload="retardo()">
     <header>
         <h2>NOTICIAS:</h2>
-        <a class="encuesta" href="https://forms.gle/twL4H68uWmjTj77v5">Encuesta</a>
+        <a class="encuesta" href="https://forms.gle/twL4H68uWmjTj77v5" target="_blank">Encuesta</a>
     </header>
     <div class="grid">
-        <a id="notice1"
+        <a id="notice1" target="_blank"
             href="https://www.lasexta.com/noticias/sociedad/hijo-comporta-asi-alerta-estas-son-pruebas-macabro-juego-ballena-azul_2017042859031b940cf2ea95b034b932.html"><img
                 src="noticia/ballenaAzul.png"></a>
-        <a id="notice2"
+        <a id="notice2" target="_blank"
             href="https://www.lateja.cr/nacional/alarma-por-juego-ballena-azul/XXJD4VUXUBDH3BKRZAMDW6ZXJY/story/"><img
                 src="noticia/alertaBA.png"></a>
-        <a id="notice3"
+        <a id="notice3" target="_blank"
             href="https://www.thesun.co.uk/news/2968966/russia-teenage-deaths-social-media-suicide-police-investigation/"><img
                 src="noticia/investigacion.png"></a>
-        <a id="notice4"
+        <a id="notice4" target="_blank"
             href="https://www.thesun.co.uk/news/3112487/blue-whale-suicide-game-russia-boy-saved-jumping-off-flats/"><img
                 src="noticia/salvado.png"></a>
-        <a id="notice5"
+        <a id="notice5" target="_blank"
             href="https://inews.co.uk/news/long-reads/blue-whale-suicide-game-online-grooming-predators-307456"><img
                 src="noticia/carcel.png"></a>
-        <a id="notice6"
+        <a id="notice6" target="_blank"
             href="https://www.express.co.uk/news/world/776496/How-to-become-a-fairy-game-girls-gas-fire-Rainbow-Sofia-Ezhov-Winx-Club-School-of-Witches"><img
                 src="noticia/hada.png"></a>
-        <a id="notice7" href="https://www.verywellmind.com/what-is-the-choking-game-3288288"><img
+        <a id="notice7" target="_blank" href="https://www.verywellmind.com/what-is-the-choking-game-3288288"><img
                 src="noticia/juegoMuerte.png"></a>
-        <a id="notice8"
+        <a id="notice8" target="_blank"
             href="https://www.europafm.com/noticias/viral/sal-hielo-peligroso-challenge-que-debes-hacer_201701265889f30c0cf26c6d591a9930.html"><img
                 src="noticia/salHielo.png"></a>
-        <a id="notice9" href="https://www.elperiodico.com/es/sociedad/20190529/juego-muerte-reto-viral-7479178"><img
+        <a id="notice9" target="_blank" href="https://www.elperiodico.com/es/sociedad/20190529/juego-muerte-reto-viral-7479178"><img
                 src="noticia/asfixia.png"></a>
-        <a id="notice10"
+        <a id="notice10" target="_blank"
             href="https://www.notimerica.com/sociedad/noticia-nuevo-reto-viral-tide-pod-challenge-enfermando-adolescentes-iberoamerica-estados-unidos-20180119144816.html"><img
                 src="noticia/tidePod.png"></a>
-        <a id="notice11"
+        <a id="notice11" target="_blank"
             href="https://www.lasexta.com/noticias/virales/hot-water-challenge-nuevo-absurdo-reto-viral-arrojarse-agua-hirviendo-que-causado-victimas-mortales_2017083059a699230cf26532b9f3b6f5.html"><img
                 src="noticia/hotWater.png"></a>
-        <a id="notice12"
+        <a id="notice12" target="_blank"
             href="https://www.abc.es/sociedad/abci-fire-challenge-reto-viral-dejado-nino-herido-grave-quemaduras-segundo-grado-201910081138_noticia.html"><img
                 src="noticia/fuego.png"></a>
     </div>
