--- a/enlaces.html
+++ b/enlaces.html
@@ -10,7 +10,7 @@
 <body onload="retardo()">
     <header>
         <h2>NOTICIAS:</h2>
-        <a class="encuesta" href="https://forms.gle/twL4H68uWmjTj77v5" target="_blank">Encuesta</a>
+        <a class="encuesta" href="https://forms.gle/jRaM66GC16DYU5bZA" target="_blank">Encuesta</a>
     </header>
     <div class="grid">
         <a id="notice1" target="_blank"
